dodano tabelka wyswietlajaca leki

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
+# Config for h2
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.data-username=admin
-spring.datasource.data-password=admin
+spring.datasource.username=admin
+spring.datasource.password=admin
+
+# Always initialize the database using data.sql script
+spring.datasource.initialization-mode=always
+
+hibernate.dialect=org.hibernate.dialect.H2Dialect
