--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=admin
 spring.datasource.initialization-mode=always
 
 hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# Default config
+server.port=9191
