dodano usuwanie produktów

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # Default config
 server.port=9191
+
+#handle delete/put methods in thymeleaf
+spring.mvc.hiddenmethod.filter.enabled=true
