--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ server.port=9191
 
 #handle delete/put methods in thymeleaf
 spring.mvc.hiddenmethod.filter.enabled=true
+
+java.runtime.version=16
